# wattershed

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  refresh.yml
data/curated/: sites.yaml
data/processed/: county_atlas.csv  reference_manifest.json
data/reference/: egrid_subregion_map.csv  nerc_ltra.csv
docs/: DATA_SOURCES.md  FLAGSHIP_ANALYSIS.md  INTERVIEW_GUIDE.md  LAUNCH_POST.md  LIMITATIONS.md  METHODOLOGY.md  SELF_ASSESSMENT.md
site/: index.html
src/wattershed/: __init__.py  cli.py  config.py  demand.py  geocode.py  models.py  provenance.py
src/wattershed/dashboard/: build.py  template.html
src/wattershed/pipelines/: atlas.py  build_reference.py  screen.py
src/wattershed/report/: render.py
src/wattershed/report/templates/: report.html.j2
src/wattershed/scoring/: burden.py  grid.py  mitigation.py  reference.py  tiers.py  water.py
src/wattershed/sources/: acs.py  aqueduct.py  base.py  egrid.py  ejscreen_legacy.py  frs.py  nerc.py  places.py  usdm.py  water_use.py
tests/: test_demand.py  test_ground_truth.py  test_provenance.py  test_registry_and_projection.py  test_scoring.py  test_tiers.py
